<resources>
    <string name="app_name">Society Focus</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_save">Save</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_society">Society</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Society Focus</string>


    <string name="saturday">S</string>
    <string name="sunday">S</string>
    <string name="monday">M</string>
    <string name="tuesday">T</string>
    <string name="wednesday">W</string>
    <string name="thursday">T</string>
    <string name="friday">F</string>
    <string name="action_sign_in_short">Sign in</string>

    <string name="enter_complaint">Enter your complaint</string>

    <string name="prompt_name">Name</string>
    <string name="prompt_address">Address</string>
    <string name="prompt_aboutyourself">About Yourself(&lt; 100 Characters)</string>
    <string name="prompt_phoneno">Phone No</string>
    <string name="enter_complaint_title">Enter title</string>
    <string name="prompt_old_password">Old password</string>
    <string name="prompt_new_password">New password</string>
    <string name="prompt_new_password_confirm">Confirm new password</string>
    <string name="prompt_date">Enter date</string>
    <string name="prompt_time">Enter time</string>
    <string name="prompt_description">Enter description</string>
    <string name="book_now">Book now</string>
    <string name="title_activity_settings">Settings</string>

    <string name="facebook_app_id">1749929318576139</string>

    <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>


    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="info_register_society">REGISTER WITH SOCIETY FOCUS</string>
    <string name="action_register">CLICK HERE</string>


</resources>
